--- a/FoodConnection_-/Views/Puntajes/Create.cshtml
+++ b/FoodConnection_-/Views/Puntajes/Create.cshtml
@@ -27,7 +27,7 @@
                 <select asp-for="RestauranteId" class ="form-control" asp-items="ViewBag.Restaurante"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Agregar" class="btn btn-primary" />
             </div>
         </form>
     </div>
