--- a/FoodConnection_-/Views/Recetas/Create.cshtml
+++ b/FoodConnection_-/Views/Recetas/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Agregar una receta</h1>
 
-<h4>Receta</h4>
+ 
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -34,7 +34,7 @@
                 <span asp-validation-for="PathImagen" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Agregar" class="btn btn-primary" />
             </div>
         </form>
     </div>
