--- a/FoodConnection_-/Views/Recetas/Details.cshtml
+++ b/FoodConnection_-/Views/Recetas/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FoodConnection__.Models.Receta
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalles";
 }
 
 <h1>Details</h1>
